--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.1",
+    "next": "^12.0.2-canary.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.1"
   }
 }
